--- a/estilos/style.css
+++ b/estilos/style.css
@@ -60,3 +60,10 @@ section#redes-sociais img:hover {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.623);
     transition: transform .5s, border .5s;
 }
+
+@media (max-width: 600px)
+{
+  section#telefone {
+    left: 40%;
+   }
+}
